Folder sorting + RASDver2.tex is added

--- a/DD/DD.tex
+++ b/DD/DD.tex
@@ -1,47 +1,75 @@
-\documentclass[12pt, letterpaper]{report}
+\documentclass[12pt, letterpaper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[document]{ragged2e}
 \usepackage{graphicx}
 \usepackage{comment}
+
 \graphicspath{{images/}}
 
-\begin{comment}
-\title{DESIGN DOCUMENT}
-\titlehead{\centering\includegraphics[width=4cm]{Logo_Politecnico_Milano.png}}
-\author{Artemiy Frolov, mat. 876373}
-\date{autumn 2016}
-\end{comment}
 
 % from here content will be shown
 \begin{document}
+
 \begin{titlepage}
 %\maketitle
 \centering
 {\Huge DESIGN DOCUMENT} \\
 \vspace{1cm}
-\includegraphics[width=4cm]{Logo_Politecnico_Milano.png} \\
+\includegraphics[width=5cm]{Logo_Politecnico_Milano.png} \\
 \vspace{1cm}
 Artemiy Frolov, mat. 876373 \\
 \vspace{0.5cm}
 autumn 2016
 \end{titlepage}
 
+% CONTENTS
 
+\tableofcontents{}
 
-\section{Introduction} % (fold)
-\label{sec:introduction}
+\newpage
+% END CONTENTS
 
-% section introduction (end)
+% INTRODUCTION
+\section{Introduction}
+\subsection{Purpose}
 
-This document is design to dive more into technical implementation of the CarShare service
+The purpose of this document is to provide more technical details about the CarSharing System software application 
 
-Items to perform:
+This document is directed to developers and is necessary to state these aspects of the developing system: 
 \begin{itemize}
-	\item test0
-	\item test1
+	\item high level architecture 
+	\item runtime view 
+	\item choosed architectural styles and patterns
+	\item algorithm design of key components 
+	\item possiby include some extensions of the user interface 
 \end{itemize}
 
+\subsection{Scope}
 
 
+
+
+\subsection{Definitions, Acronyms, Abbreviations}
+
+
+
+
+\subsection{Reference Documents} 
+
+
+
+\subsection{Document Structure}
+
+\section{Architectural Design} 
+
+
+
+
+
+
+
+
+\newpage
+% INTRODUCTION END
 
 \end{document}
